tests/paczka1/fuzzy1/73439745.err
Error in line 2: 0qL8wUqPVUB A224 60,4
Error in line 3: 4gGmRveQq A371 14,6
Error in line 6: x71cnkJOQ7 A371 28,9
Error in line 13: A224 S238 56,2
Error in line 32: 525 S1F 128,3
Error in line 15: 525 S19 62,0
Error in line 33: 525 A371 83,0
Error in line 35: 0qL8wUqPVUB A371 37,0
Error in line 29: 4gGmRveQq A224 37,6
